Revert "specの事前適応"
This reverts commit 11061e01b50d20555a2fcd6083b96e96bab4cf54.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
     - 'vendor/**/*'
     - 'bin/**/*'
     - 'config.ru'
+    - 'spec/**/*'
     - 'node_modules/**/*'
 # デフォルトtrue
 Rails:
