--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# Ignore rubocop permanet log file
+# Ignore rubocop permanent log file
 /.rubocop_todo.yml
