--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 
 # Ignore rubocop permanent log file
 /.rubocop_todo.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
