--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
+    "rails-ujs": "^5.2.4-2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
