--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "rails-ujs": "^5.2.4-2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
